--- a/06-06-2020.md
+++ b/06-06-2020.md
@@ -1,6 +1,11 @@
 # Machine Learning
 
-According to Arthur Samwell, Field of Study that gives ccomputers the ability to learn without being programmed explicitly programmed.
+According to Arthur Samwell, Field of Study that gives ccomputers the ability to learn without being programmed explicitly.
 
 According to Tom Mitchell,A computer program is said to learn from an experience E with respect to some task T and some performance measure P, if performance on T,as measured by P, improves with experience E.
 
+<b>Two types</b>
+  <ol>
+  <li>Supervised Learning</li>
+  <li>Unsupervised Learning</li>
+  </ol>
