--- a/06-06-2020.md
+++ b/06-06-2020.md
@@ -46,46 +46,46 @@ According to Tom Mitchell,A computer program is said to learn from an experience
   
   
   detailed problem/model:
-  <p>
-  % define model 
-f1 = 1100;              % frequency of tone generator 1; unit: Hz 
-f2 = 2900;              % frequency of tone generator 2; unit: Hz 
-Ts = 1/(40*max(f1,f2)); % sampling period; unit: s 
-dMic = 1;               % distance between microphones centered about origin; unit: m 
-dSrc = 10;              % distance between tone generators centered about origin; unit: m 
-c = 340.29;             % speed of sound; unit: m / s 
+  
+  
+  % define model <br>
+f1 = 1100;              % frequency of tone generator 1; unit: Hz <br>
+f2 = 2900;              % frequency of tone generator 2; unit: Hz <br>
+Ts = 1/(40*max(f1,f2)); % sampling period; unit: s <br>
+dMic = 1;               % distance between microphones centered about origin; unit: m <br>
+dSrc = 10;              % distance between tone generators centered about origin; unit: m <br>
+c = 340.29;             % speed of sound; unit: m / s <br>
 
-% generate tones
-figure(1);
-t = [0:Ts:0.025];
-tone1 = sin(2*pi*f1*t);
-tone2 = sin(2*pi*f2*t);
-plot(t,tone1); 
-hold on;
-plot(t,tone2,'r'); xlabel('time'); ylabel('amplitude'); axis([0 0.005 -1 1]); legend('tone 1', 'tone 2');
-hold off;
+% generate tones<br>
+figure(1);<br>
+t = [0:Ts:0.025];<br>
+tone1 = sin(2*pi*f1*t);<br>
+tone2 = sin(2*pi*f2*t);<br>
+plot(t,tone1); <br>
+hold on;<br>
+plot(t,tone2,'r'); xlabel('time'); ylabel('amplitude'); axis([0 0.005 -1 1]); legend('tone 1', 'tone 2');<br>
+hold off;<br>
 
-% mix tones at microphones
-% assume inverse square attenuation of sound intensity (i.e., inverse linear attenuation of sound amplitude)
-figure(2);
-dNear = (dSrc - dMic)/2;
+% mix tones at microphones<br>
+% assume inverse square attenuation of sound intensity (i.e., inverse linear attenuation of sound amplitude)<br>
+figure(2);<br>
+dNear = (dSrc - dMic)/2;<br>
 dFar = (dSrc + dMic)/2;
-mic1 = 1/dNear*sin(2*pi*f1*(t-dNear/c)) + \
-       1/dFar*sin(2*pi*f2*(t-dFar/c));
-mic2 = 1/dNear*sin(2*pi*f2*(t-dNear/c)) + \
-       1/dFar*sin(2*pi*f1*(t-dFar/c));
-plot(t,mic1);
-hold on;
-plot(t,mic2,'r'); xlabel('time'); ylabel('amplitude'); axis([0 0.005 -1 1]); legend('mic 1', 'mic 2');
-hold off;
+mic1 = 1/dNear*sin(2*pi*f1*(t-dNear/c)) + \<br>
+       1/dFar*sin(2*pi*f2*(t-dFar/c));<br>
+mic2 = 1/dNear*sin(2*pi*f2*(t-dNear/c)) + \<br>
+       1/dFar*sin(2*pi*f1*(t-dFar/c));<br>
+plot(t,mic1);<br>
+hold on;<br>
+plot(t,mic2,'r'); xlabel('time'); ylabel('amplitude'); axis([0 0.005 -1 1]); legend('mic 1', 'mic 2');<br>
+hold off;<br>
 
-% use svd to isolate sound sources
-figure(3);
-x = [mic1' mic2'];
-[W,s,v]=svd((repmat(sum(x.*x,1),size(x,1),1).*x)*x');
-plot(t,v(:,1));
-hold on;
-maxAmp = max(v(:,1));
-plot(t,v(:,2),'r'); xlabel('time'); ylabel('amplitude'); axis([0 0.005 -maxAmp maxAmp]); legend('isolated tone 1', 'isolated tone 2');
-hold off;
-</p>
+% use svd to isolate sound sources<br>
+figure(3);<br>
+x = [mic1' mic2'];<br>
+[W,s,v]=svd((repmat(sum(x.*x,1),size(x,1),1).*x)*x');<br>
+plot(t,v(:,1));<br>
+hold on;<br>
+maxAmp = max(v(:,1));<br>
+plot(t,v(:,2),'r'); xlabel('time'); ylabel('amplitude'); axis([0 0.005 -maxAmp maxAmp]); legend('isolated tone 1', 'isolated <br>tone 2');<br>
+hold off;<br>
