--- a/06-06-2020.md
+++ b/06-06-2020.md
@@ -37,3 +37,12 @@ According to Tom Mitchell,A computer program is said to learn from an experience
   <li>astronomical data analysis</li>
   </ul>
   
+    <b>Cocktail Party Algorithm</b>
+  
+  To split out the multiple,clumsy voices into seperate clear individual voices.Simple siongle line code in Octave programming Environment.
+  
+  [W,s,v]=svd((repmat(sum(x.*x,1),size(x,1),1).*x)*x');
+  
+  
+  
+  detailed problem/model:
