--- a/06-06-2020.md
+++ b/06-06-2020.md
@@ -48,4 +48,4 @@ According to Tom Mitchell,A computer program is said to learn from an experience
   
   detailed problem/model:
   
-  <a href="https://github.com/RAHULPONNANA/Innominds-Internship/blob/master/cocktail.m">
+  <a href="https://github.com/RAHULPONNANA/Innominds-Internship/blob/master/cocktail.m">here</a>
