--- a/08-06-2020.md
+++ b/08-06-2020.md
@@ -22,6 +22,11 @@ x = (x - mean) / (max(x) - min(x))
 * to make it easier, declare convergence if J(t) decreases by less than 10^-3 in one iteration.
 * also, try alpha as ... 0,0001 , 0.001 , 0.01 , 0.1 , 1 , ...
 
+
 ### Solving for t using normal equation :
+
+t = ( XTX }^-1 XTy
+
+![alt text](https://i.stack.imgur.com/qzv5e.jpg)
 
 ![alt text](https://raw.githubusercontent.com/ritchieng/machine-learning-stanford/master/w2_linear_regression_multiple/normalequation.png)
