--- a/09-06-2020.md
+++ b/09-06-2020.md
@@ -26,3 +26,11 @@
 
 
 ![alt text](https://i.stack.imgur.com/zKpJy.jpg)
+
+Each of the classes are classified by one-vs-all algorithm.
+
+ht(i)(x) = P( y=i | x;t )
+
+-> Train a logistic regression classifier ht(i)(x) for each class i to predict the probability that y=i
+
+-> On a new input x1 to make a prediction, pick the class i that maximizes ht(i)(x).
