--- a/12-06-2020.md
+++ b/12-06-2020.md
@@ -12,3 +12,33 @@
 Then disable gradient checking code.
 
 -> Use gradient descent/advance optimization with backpropagation to minimize J(t).
+
+# After Regularized Linear Expression
+
+![alt](https://i1.wp.com/pingax.com/wp-content/uploads/2014/05/regularizataion.png)
+
+## what to do?
+
+-> more training examples
+
+-> smaller sets of features
+
+-> getting additional features
+
+-> polynomial features
+
+-> decreasing lambda
+
+-> increasing lambda
+
+**after training, test the 30% of data and calculate error**
+
+![alt](https://slideplayer.com/slide/14472341/90/images/35/Model+selection+Choose.+How+well+does+the+model+generalize+Report+test+set+error+..jpg)
+
+Cross Validation.
+
+train-60%
+
+cv-20%
+
+test-20%
