--- a/13-06-2020.md
+++ b/13-06-2020.md
@@ -19,3 +19,6 @@ lambda values should take accordingly
 .
 
 10 (10.24)
+
+![alt](https://github.com/RAHULPONNANA/Innominds-Internship/blob/master/Screenshot%20(182).png)
+
