--- a/13-06-2020.md
+++ b/13-06-2020.md
@@ -22,3 +22,28 @@ lambda values should take accordingly
 
 ![alt](https://github.com/RAHULPONNANA/Innominds-Internship/blob/master/Screenshot%20(182).png)
 
+![alt](https://github.com/RAHULPONNANA/Innominds-Internship/blob/master/Screenshot%20(186).png)
+
+# Precision and Recall
+
+![alt](https://miro.medium.com/max/1446/1*0VSsFcRZRuhDAdWKnMxhxQ.png)
+
+### F-Score
+
+f-score = ( 2 * precision * recall )/( precision + recall )
+
+among a set of algorithms, to find the best algorithm, we select using f-score.
+
+## High accuracy learning system
+
+Algorithms:
+
+- perceptron (logistic regression)
+
+- winnow
+
+- memory-based
+
+- Naive Bayes
+
+Not the best Algorithm that wins, but who has the most Data.
